chore: fix z-index issue

--- a/src/common/modules/TopNav/components/SignedInMenu/SignedInMenu.module.scss
+++ b/src/common/modules/TopNav/components/SignedInMenu/SignedInMenu.module.scss
@@ -3,6 +3,7 @@
 
 .container {
   align-self: center;
+  z-index: 10;
   .buttonContainer {
     display: flex;
     flex-direction: row;
