--- a/src/common/modules/TopNav/components/TopNavLayout/TopNavLayout.module.scss
+++ b/src/common/modules/TopNav/components/TopNavLayout/TopNavLayout.module.scss
@@ -16,7 +16,7 @@
 
 .authModal {
   position: absolute;
-  z-index: 5;
+  z-index: 100;
   width: 100vw;
   height: 100vh;
   backdrop-filter: blur(3px);
