--- a/src/modules/Home/components/Home/Home.module.scss
+++ b/src/modules/Home/components/Home/Home.module.scss
@@ -6,6 +6,7 @@
   justify-content: stretch;
   flex-direction: column;
   position: relative;
+  z-index: -1;
   h1 {
     @include text-style('font-main', 'regular', 'body');
 
@@ -23,6 +24,7 @@
 
 .homeSection1 {
   width: 100%;
+  z-index: -1;
 }
 
 .homeBackgroundImage {
